sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/TaggedCardsFetchMethod__c.field-meta.xml
<CustomField>
    <fullName>TaggedCardsFetchMethod__c</fullName>
    <defaultValue>2</defaultValue>
    <description>0: v2.3までの方法。自分所有の名刺のみが対象
1: v2.4での方法。可視の名刺が対象
その他: v2.5 可視の名刺が対象で、制限を考慮</description>
    <label>タグ付き名刺の取得方法</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>