sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/ToDoName__c.field-meta.xml
<CustomField>
    <fullName>ToDoName__c</fullName>
    <description>【移行済】</description>
    <inlineHelpText>【移行済】</inlineHelpText>
    <label>取引先・取引先責任者に登録 ToDo件名【移行済】</label>
    <length>255</length>
    <type>Text</type>
</CustomField>