sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/TriggerCreateFeedOnName__c.field-meta.xml
<CustomField>
    <fullName>TriggerCreateFeedOnName__c</fullName>
    <defaultValue>true</defaultValue>
    <description>名刺の追加時、既存の名刺の最新名刺を更新するので、そのとき、既存名刺の所有者にフィードで、通知します。</description>
    <label>トリガで同じ人と名刺交換したらフィードで知らせる</label>
    <type>Checkbox</type>
</CustomField>