sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/TriggerHistoryIsActive__c.field-meta.xml
<CustomField>
    <fullName>TriggerHistoryIsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>トリガで名刺の履歴オブジェクトに1次納品、2次納品の履歴を保存します。</description>
    <label>トリガで名刺履歴を保存する</label>
    <type>Checkbox</type>
</CustomField>