sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/TriggerLeadExRenkeiTriggerHandler__c.field-meta.xml
<CustomField>
    <fullName>TriggerLeadExRenkeiTriggerHandler__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lead連携拡張パッケージの中にある 自動連携のトリガハンドラを呼ぶ</description>
    <inlineHelpText>サンブリッジサポートの指示があった場合のみ設定します。</inlineHelpText>
    <label>トリガでリード拡張パッケージの自動連携を使う</label>
    <type>Checkbox</type>
</CustomField>