sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/TriggerMergeExpandCriteria__c.field-meta.xml
<CustomField>
    <fullName>TriggerMergeExpandCriteria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>トリガで実施する名寄せの条件を拡張する</label>
    <type>Checkbox</type>
</CustomField>