sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/TriggerMergeNameCards__c.field-meta.xml
<CustomField>
    <fullName>TriggerMergeNameCards__c</fullName>
    <defaultValue>true</defaultValue>
    <description>名刺を追加、更新、削除、復活したとき、名刺を名寄します。</description>
    <label>トリガで名刺データを名寄せする</label>
    <type>Checkbox</type>
</CustomField>