sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/TriggerRegDateTime__c.field-meta.xml
<CustomField>
    <fullName>TriggerRegDateTime__c</fullName>
    <defaultValue>true</defaultValue>
    <description>名刺の追加、更新時、項目「取引先」、「リード」に値がセットされていたら、取引先取込日時 リード取込日時に現在時刻をセットします。</description>
    <label>トリガで取込日時をセットする</label>
    <type>Checkbox</type>
</CustomField>