sfdx-source/SmartVisca/main/default/objects/SmartViscaConfig__c/fields/TriggerRenkeiTriggerHandler__c.field-meta.xml
<CustomField>
    <fullName>TriggerRenkeiTriggerHandler__c</fullName>
    <defaultValue>true</defaultValue>
    <description>自動連携のトリガハンドラを呼ぶ</description>
    <inlineHelpText>サンブリッジサポートの指示があった場合のみ設定します。</inlineHelpText>
    <label>トリガで自動連携を行う</label>
    <type>Checkbox</type>
</CustomField>